--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,8 @@
     <!--Facebook-->
     <string name="facebook_app_id">165584313989374</string>
     <string name="fb_login_protocol_scheme">fb165584313989374</string>
+    <string name="error_conection_login">There was a problem, please try again later</string>
+    <string name="cancel_conection_login">Access has been revoked</string>
 
     <!--Crashlytics
     <string name="fabric_apiKey">10f095e76ef3f4b8f530fcf41963c0f84cec7441</string>-->
