--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
 
     <!-- Menu-->
     <string name="menu_about">About</string>
+    <string name="menu_exit">Exit</string>
     <string name="menu_title_application">Application</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
