--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,7 +42,7 @@
     <string name="error_conection_login">There was a problem, please try again later</string>
     <string name="cancel_conection_login">Access has been revoked</string>
     <string name="action_share">Share</string>
-    <string name="stadium_more" translatable="false">+ STADIUM</string>
+    <string name="stadium_more">+ STADIUM</string>
 
     <string name="error_conection_sync_user" translatable="false">Ocorreu uma falha no sync de user.</string>
 
