--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -17,5 +17,5 @@
     <string name="title_activity_maps">Mapa</string>
     <string name="welcome_app">Bem vindo</string>
     <string name="menu_exit">Sair</string>
-    <string name="stadium_more" translatable="false">+ Estádio</string>
+    <string name="stadium_more">+ Estádio</string>
 </resources>
